--- a/Caravagna_2020_Index.Rmd
+++ b/Caravagna_2020_Index.Rmd
@@ -21,13 +21,17 @@ require(tidyverse)
 
 ---
 
-This is the material released with the paper G.Caravagna et al. *Model-based tumour subclonal deconvolution.*; accepted in principle at Nature Genetics, 2020. You can still refer to the [biorXiv preprint](https://www.biorxiv.org/content/10.1101/586560v1) of the paper.
+This is the material released with the paper (_under review_):
+
+* _Model-based tumor subclonal reconstruction_. Giulio Caravagna, Timon Heide, Marc Williams, Luis Zapata, Daniel Nichol, Ketevan Chkhaidze, William Cross, George D. Cresswell, Benjamin Werner, Ahmet Acar, Chris P. Barnes, Guido Sanguinetti, Trevor A. Graham, Andrea Sottoriva. bioRxiv 586560, 2019; [doi:doi.org/10.1101/586560](https://doi.org/10.1101/586560)
 
 The following R packages are required to run the analyses.
 
 * [MOBSTER](https://caravagn.github.io/mobster), to cluster the tumour site frequency spectrum with Beta and Pareto distributions;
 * [BMix](https://caravagn.github.io/BMix) and [VIBER](https://caravagn.github.io/VIBER), to model read counts data with Binomial mixtures;
 * [CNAqc](https://caravagn.github.io/CNAqc), to integrate mutation and copy number data from bulk sequencing.
+
+A number of other packages are used to generate synthetic data and plots, and are referenced where more appropriate.
 
 ---
 
