--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,9 @@ A number of other packages are used to generate synthetic data and plots, and ar
 
 Each of  the following vinettes is rendered in HTML. To visualise them you can either download the repository and open it locally, or [use a preview website](https://htmlpreview.github.io/).
 
-**1. [Example subclonal dynamics](./Tumor_sim_example/Example_tumour_simulation.html).** Simulated example of tumour subclonal evolution with snapshots of tumour dynamics at different timepoints, and MOBSTER analysis.
+**1. [Example subclonal dynamics](https://caravagn.github.io/mobster/articles/Example_tumour_simulation.html).**
+Simulated example of tumour subclonal evolution with snapshots of tumour
+dynamics at different timepoints, and MOBSTER analysis.
 
 **2. [Simulated single-sample data analysis](./Tumor_sim_nospace/Simulated_onesample.html).**  `n = 150` cases with `0` or `1` subclone, with simulated WGS at median coverage 120x. Mutation calls are simulated without copy num data; the coverage is Poisson-distributed.
 
