--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,9 @@ require(tidyverse)
 <center>
 <a href="https://caravagn.github.io/mobster"><img src="https://caravagn.github.io/mobster/reference/figures/logo.png" width=77px height=91px></img></a>
 <a href="https://caravagn.github.io/VIBER"><img src="https://caravagn.github.io/VIBER/reference/figures/logo.png" width=77px height=91px></img></a>
+<a href="https://caravagn.github.io/BMix"><img src="https://caravagn.github.io/BMix/reference/figures/logo.png" width=77px height=91px></img></a>
 <a href="https://caravagn.github.io/CNAqc"><img src="https://caravagn.github.io/CNAqc/reference/figures/logo.png" width=77px height=91px></img></a>
+<a href="https://t-heide.github.io/TEMULATOR"><img src="https://t-heide.github.io/TEMULATOR/reference/figures/logo.png" width=77px height=91px></img></a>
 </center>
 
 ---
@@ -37,7 +39,7 @@ The following R packages are required to run the analyses.
 
 Each of  the following vinettes is rendered in HTML. To visualise them correctly it is best to download the repository and open the vignettes locally with your browser. As an alternative, you can [use a preview website](https://htmlpreview.github.io/).
 
-**Note** that vignettes 6 and 7, which render `DT` tables, will not be rendered by the preview website, and therefore should be opened locally on your computer.
+**Note** that vignettes 6 and 7 require `DT` tables that cannot be rendered by the preview website; opene the vignettes locally.
 
 **1. [Example subclonal dynamics](https://caravagn.github.io/mobster/articles/Example_tumour_simulation.html).**
 Simulated example of tumour subclonal evolution with snapshots of tumour
